# pigait

./: .gitattributes  .gitignore  README.md  environment.yml  pyproject.toml  requirements.txt
docs/source/: conf.py  index.rst
src/pigait/: __init__.py
src/pigait/data/: __init__.py  event_data.py  imu_data.py
src/pigait/events/: __init__.py  contact.py
src/pigait/filtering/: __init__.py  filtering.py
src/pigait/gait/: __init__.py  gait_parameters.py
src/pigait/ins/: __init__.py  ins.py
src/pigait/plotting/: plot_signal.py
src/pigait/util/: __init__.py  util.py
