[project]
name = "pigait_alkvis"
readme = "README.md"
description = "TBD"
version = "0.0.1"
authors = [
    { name = "alkvis", email = "alexander.kvist@ki.se" }
]
requires-python = ">=3.8"
dependencies = [
    "pandas==2.2.2",
    "numpy==1.26.4",
    "scipy==1.13.1",
    "ahrs==0.3.1",
    "PyWavelets==1.4.1",
    "matplotlib==3.9.0",
    "numexpr==2.8.4"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = [
    "build==1.2.1",
    "flake8==7.0.0",
    "Flake8-pyproject==1.2.3",
    "portray==1.8.0",
    "pylint==3.2.2",
    "pyright==1.1.365",
    "pytest==8.2.1",
    "pytest-cov==5.0.0",
    "ruff==0.4.7",
]

[tool.pylint.main]
py-version = "3.9"
ignore-paths = ["pigait/_version.py"]

[tool.pylint.format]
expected-line-ending-format = "LF"
max-line-length = 88

[tool.pylint.basic]
good-names-rgxs = "^(dl)$"

[tool.pylint.design]
min-public-methods = 1
max-args = 10
max-attributes = 15
max-locals = 20

[tool.pylint.miscellaneous]
notes = ["FIXME", "XXX"]

[tool.flake8]
ignore = ['E231', 'E241', 'W503']
per-file-ignores = [
    '__init__.py:F401',
]
max-line-length = 88
count = true

# https://docs.pytest.org/en/7.1.x/reference/customize.html#pyproject-toml
[tool.pytest.ini_options]
addopts = "--cov=pigait --junitxml=coverage.xml --cov-fail-under=80"

# https://github.com/microsoft/pyright/blob/main/docs/configuration.md#sample-pyprojecttoml-file
[tool.pyright]
exclude = [
    "test/**"
]

[tool.portray.mkdocs]
markdown_extensions = [
    "pymdownx.emoji"
]

# Configure mkdocs:
# https://timothycrosley.github.io/portray/docs/quick_start/4.-configuration/
[tool.portray.mkdocs.theme]
name = "material"
palette = {primary = "blue"}

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
